SvelteKit-Final_Project

--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" data-theme="light" data-font="monospace">
+<html lang="en" data-theme="forest" data-font="monospace">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/Doppelganger.png" />
